variables.Variables.scala.error
Erreur de compilation :
Variables:2: error: value ++ is not a member of Int
while (!estSurBiscuit ()) {avance (); n++}
                                       ^