variables.Variables.scala.code
var n = 0
while (!estSurBiscuit ()) {avance (); n++}
prendBiscuit ()
retourne ()
for (i <- 0 to n) {avance ()}
poseBiscuit ()
retourne ()